src/Components/UI/ItemPage/itemPage.module.css
.itemPage {
  width: 100%;
  height: 93vh;
  padding: var(--padding-container-xl);
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}
.itemPage::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 35vw;
  background-color: var(--color-primary-800);
  height: 100%;
  z-index: var(--z-index-100);
}

.tag {
  display: flex;
  align-items: center;
  justify-content: center;
  width: var(--icon-size-64);
  height: var(--icon-size-64);
  background-color: var(--color-tertiary-900);
  position: absolute;
  bottom: 0;
  left: 2rem;
  border-radius: var(--border-radius-sm) var(--border-radius-sm) 0 0;

  z-index: var(--z-index-200);
}
.tag img {
  width: var(--icon-size-48);
  height: auto;
}

/* MAIN SECTION */

.mainSection {
  width: 100%;
  min-width: 50rem;
  max-width: 110rem;
  height: 70rem;
  background-color: transparent;
  backdrop-filter: blur(110px);
  z-index: var(--z-index-300);
  border-radius: var(--border-radius-lg);
  border-left: 2px solid #ffffff55;
  border-top: 3px solid #ffffff35;
  box-shadow: var(--box-shadow);
  overflow: hidden;
  display: flex;
  align-items: stretch;
  justify-content: space-between;
  gap: var(--spacing-md);
}

.bgLogo {
  position: absolute;
  top: 50%;
  left: 0;
  width: 30rem;
  height: auto;
  transform: translate(50%, -50%);
  border: 2px solid;
  z-index: var(--z-index-300);
  filter: sepia(200%);
}

.section__img {
  z-index: var(--z-index-300);
  flex: 1;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: var(--spacing-md);
}

.section__img img {
  width: 100%;
  transform: translateY(-3rem);
}

.section__content {
  width: 50%;
  display: flex;
  align-items: flex-start;
  align-content: flex-start;
  justify-content: flex-start;
  flex-wrap: wrap;
  padding: var(--spacing-md);
}

.item__card {
  width: 100%;
  height: min-content;
  padding: var(--spacing-md);
  border-radius: var(--border-radius-lg);
  /* margin-bottom: var(--spacing-md); */
  position: relative;
}
.item__title {
  width: 85%;
  color: var(--color-tertiary-900);
  font-size: var(--font-size-xl);
}

.item__price {
  width: 100%;
  font-size: var(--font-size-xxl);
  color: var(--color-secondary-800);
  margin-bottom: var(--spacing-md);
}
.item__description {
  width: 100%;
  font-family: var(--font-family-regular);
  font-size: var(--font-size-lg);
  letter-spacing: 0;
  color: var(--color-gray-700);
  border-bottom: 3px solid var(--color-gray-100);
  padding: 1rem 0;
}
.ingredient__card {
  /* background-color: var(--color-gray-100); */
  width: 100%;
  height: min-content;
  padding: 0 var(--spacing-md);
  border-bottom: 3px solid var(--color-gray-100);
}

.ingredient__title {
  font-family: var(--font-family-bold);
  font-size: var(--font-size-lg);
  margin-bottom: var(--spacing-sm);
  color: var(--color-gray-800);
}

.ingredient__text {
  font-family: var(--font-family-regular);
  font-size: var(--font-size-md);
  letter-spacing: 0;
  color: var(--color-gray-700);
  padding-bottom: 2rem;
}
.nutrition__card {
  width: 100%;
  height: min-content;
  padding: var(--spacing-md);
}

.nutrition__title {
  font-family: var(--font-family-bold);
  font-size: var(--font-size-lg);
  margin-bottom: var(--spacing-md);
  color: var(--color-gray-800);
}
.nutrition__list {
  width: 100%;
  color: var(--color-gray-700);
}

.list {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: var(--spacing-sm);
}

.listItem {
  font-family: var(--font-family-regular);
  background-color: var(--color-tertiary-100);
  color: var(--color-tertiary-900);
  padding: var(--spacing-sm);
  border-radius: var(--border-radius-circle);
}

/* TAG CALORY */

.TagCalory {
  position: absolute;
  top: 2rem;
  right: 2rem;
  font-family: var(--font-family-bold);
  font-size: var(--font-size-xs);
  line-height: 1;
  color: var(--color-primary-700);
  background-color: var(--color-tertiary-800);
  padding: var(--spacing-md) var(--spacing-xs);
  border-radius: var(--border-radius-circle);
  text-align: center;
}

